[package]
name = "tsd"
version = "0.1.0"
authors = ["magbone <2300427529@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
m3u8-rs = "1.0.6"
reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
url = { version = "2", features = ["serde"] }
rust-crypto = "^0.2"